vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: for vpc
Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      VpcId: !Ref MyVPC
      MapPublicIpOnLaunch: true
      CidrBlock: 172.16.1.0/24
      Tags:
        - Key: Name
          Value: PublicSubnet1A

  AppPrivateSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      VpcId: !Ref MyVPC
      CidrBlock: 172.16.2.0/24
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1A

  DataPrivateSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      VpcId: !Ref MyVPC
      CidrBlock: 172.16.3.0/24
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1A

  PublicSubnet2B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      VpcId: !Ref MyVPC
      CidrBlock: 172.16.4.0/24
      Tags:
        - Key: Name
          Value: PublicSubnet1B

  AppPrivateSubnet2B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      VpcId: !Ref MyVPC
      CidrBlock: 172.16.5.0/24
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1B

  DataPrivateSubnet2B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      VpcId: !Ref MyVPC
      CidrBlock: 172.16.6.0/24
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1B

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyVPC-IGW
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref bastion
      ImageId: ami-0592c673f0b1e7665
      SubnetId: !Ref PublicSubnet1B
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref BastionSG
      Tags:
        - Key: Name
          Value: BastionHost

  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: null
      GroupDescription: Enable SSH access
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 172.12.9.0/24
      Tags:
        - Key: Name
          Value: BastionHost
